@@ -15,6 +15,7 @@
     <a href="#" onclick="driveBackward();">DriveBackward</a>
     <a href="#" onclick="turnAPositive();">turnAPositive</a>
     <a href="#" onclick="turnANegative();">turnANegative</a>
+    <a href="#" onclick="rawCommand();">RAW command (change LED)</a>
   </body>
   <script>
     console.log('Is Web Bluetooth supported: ' + isWebBluetoothSupported);
